--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                     <ul class="navbar-nav justify-content-end  pe-3">
                         <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#service3" role="button" data-bs-toggle="dropdown" >Service</a>
+                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#service" role="button" data-bs-toggle="dropdown" >Service</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="dineout.html">Dine-in Service</a></li>
                                 <li><a class="dropdown-item" href="cateringservice.html">Catering Service</a></li>
                                 <li><a class="dropdown-item" href="monthlyfood.html">Monthly Meals</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#gallery3">Gallery</a> </li>
+                        <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a> </li>
                     </ul>
                     <div class="mt-3 mt-lg-0">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="offcanvas" data-bs-target="#login">Get In Touch</button>
@@ -51,7 +51,7 @@
                             <li><a class="dropdown-item" href="monthlyfood.html">Monthly Meals</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item ms-3"><a class="nav-link text-white" href="#gallery1">Gallery</a></li>
+                    <li class="nav-item ms-3"><a class="nav-link text-white" href="#gallery">Gallery</a></li>
                 </ul>
                 <div class="mt-1 me-lg-5">
                     <button type="button" class="btn btn-outline-light ms-3 mb-2 mb-lg-0" data-bs-toggle="offcanvas" data-bs-target="#login">Get In Touch</button>
@@ -105,7 +105,7 @@
                     <div class="carousel-item active">
                         <img src="carousel/1.webp" class="d-block w-100 shadow" alt="Dineout Service">
                         <div class="carousel-caption">
-                            <h2>Dineout</h2>
+                            <h2>Dinein</h2>
                             <p>Unlock your next great meal, effortlessly.</p>
                             <a href="dineout.html" class="btn btn-primary">Explore Now</a>
                         </div>
@@ -139,8 +139,8 @@
             </div>
         </div>
     </div>
-    <div class="four">
-            <div class="container">
+    <div class="four" id="gallery">
+            <div class="container" >
                 <h1>Popular Dishes</h1>
                 <div class="row justify-content-center">
                     <div class="col-lg-3 col-md-6 col-6 d-flex justify-content-center">
@@ -250,20 +250,20 @@
         <div class="slide1">            
             <div class="item1" style="background-image: url(Image5/1.jpg);">
                 <div class="content1">
-                    <div class="name">Breakfast (₹70)</div>
-                    <div class="des">Idli, Dosa or Uttapam, Veg biryani, Vada, kesari.</div>
+                    <div class="name">Dinner (₹120)</div>
+                    <div class="des">Chapati, Chicken biryani, Chicken chili,White rice,rasam, Desserts.</div>
                 </div>
             </div>
             <div class="item1" style="background-image: url(Image5/2.jpg);">
                 <div class="content1">
-                    <div class="name">Lunch (₹100)</div>
-                    <div class="des">Chicken biryani, Chicken cravy, Egg cravy, Whiterice, Rasam and Sweet</div>
+                    <div class="name">Breakfast (₹70)</div>
+                    <div class="des">Idli, Dosa or Uttapam, Veg biryani, Vada, kesari.</div>
                 </div>
             </div>
             <div class="item1" style="background-image: url(Image5/3.jpg);">
                 <div class="content1">
-                    <div class="name">Dinner (₹120)</div>
-                    <div class="des">Chapati, Chicken biryani, Chicken chili,White rice,rasam, Desserts.</div>
+                    <div class="name">Lunch (₹100)</div>
+                    <div class="des">Chicken biryani, Chicken cravy, Egg cravy, Whiterice, Rasam and Sweet</div>
                 </div>
             </div>        
         </div>
